kubernetes/apps/coder/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app coder
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Services
    gethomepage.dev/name: *app
    gethomepage.dev/icon: https://raw.githubusercontent.com/homarr-labs/dashboard-icons/f222c55843b888a82e9f2fe2697365841cbe6025/svg/coder.svg
    # gethomepage.dev/siteMonitor: coder.${SECRET_DOMAIN}
    gethomepage.dev/description: "Coder Platform"
    gethomepage.dev/pod-selector: app.kubernetes.io/name=coder
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN},external.${SECRET_DOMAIN}"
    gatus.home-operations.com/endpoint: |-
      url: https://coder.${SECRET_DOMAIN}/healthz
      conditions:
        - "[STATUS] == 200"
      group: coder
spec:
  hostnames:
    - "coder.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: coder
          namespace: coder
          port: 80
